Fix saving of Transform Mask into rendered formats

We should ensure all the time-based nodes finished updating before
the image gets saved.

BUG:392229